--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,34 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-tangaroa-50: #e9f7ff;
+  --color-tangaroa-100: #d8efff;
+  --color-tangaroa-200: #b8e1ff;
+  --color-tangaroa-300: #8ecaff;
+  --color-tangaroa-400: #61a6ff;
+  --color-tangaroa-500: #3d82ff;
+  --color-tangaroa-600: #1b59ff;
+  --color-tangaroa-700: #114af1;
+  --color-tangaroa-800: #1141c2;
+  --color-tangaroa-900: #183e97;
+  --color-tangaroa-950: #0a183e;
+
+  --color-putty-50: #fcf9f0;
+  --color-putty-100: #f8f0dc;
+  --color-putty-200: #f1deb7;
+  --color-putty-300: #e8c88b;
+  --color-putty-400: #dda85a;
+  --color-putty-500: #d69039;
+  --color-putty-600: #c7792f;
+  --color-putty-700: #a65f28;
+  --color-putty-800: #854d27;
+  --color-putty-900: #6b3f23;
+  --color-putty-950: #3a1f10;
+
+
+
+
 }
 
 @media (prefers-color-scheme: dark) {
